--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -69,7 +69,7 @@
    Author profile and links
    ========================================================================== */
 
-/* .author__avatar {
+ .author__avatar {
   display: table-cell;
   vertical-align: top;
   width: 36px;
@@ -106,7 +106,7 @@
     padding-left: 0;
     padding-right: 0;
   }
-} */
+}
 
 .author__name {
   margin: 0;
